--- a/angular-cordova/src/app/index.pug
+++ b/angular-cordova/src/app/index.pug
@@ -8,8 +8,8 @@ html.no-js(lang='en')
         <!-- inject:css -->
         <!-- endinject -->
     body
-        h3 Hello word1
-        h4 I'm ok
+        .swapper
+            global-app
         <!-- inject:js -->
         <!-- endinject -->
         script(type='text/javascript' src='cordova.js')
