--- a/angular-cordova/src/app/pages/news/news.template.pug
+++ b/angular-cordova/src/app/pages/news/news.template.pug
@@ -1,6 +1,19 @@
-button.btn(ng-click="openModal()") Open popups
-button.btn(ng-click="onHandleCancel()") Cancel popups
-ng-content-modal(is-open='$root.homeState.cancel' on-close="onHandleCancel()")
-    popup(on-cancel="onHandleCancel()")
-
+container(
+  default-layout)
+  button.btn(
+    ng-click="openModal()") Open popups
+  button.btn(
+    ng-click="onHandleCancel()") Cancel popups
+  ng-content-modal(
+    is-open='$root.homeState.cancel' 
+    on-close="onHandleCancel()")
+  chip-list(
+    dt-chip='jsonFake' 
+    on-click='newsCtrl.onClickChip(id)'
+  )
+  //- div(ng-repeat="i in jsonFake")
+  //-   chip(
+  //-     onRemove='onRemoveChip(id)'
+  //-     class-name="abc" 
+  //-     value='abc' )
 
