--- a/angular-cordova/src/app/index.pug
+++ b/angular-cordova/src/app/index.pug
@@ -5,6 +5,7 @@ html.no-js(lang='en')
         meta(name='format-detection' content='telephone=no')
         meta(name='msapplication-tap-highlight' content='no')
         meta(name='viewport' content='user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover')
+        link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap')
         <!-- inject:css -->
         <!-- endinject -->
     body
