--- a/angular-cordova/src/app/scss/style.scss
+++ b/angular-cordova/src/app/scss/style.scss
@@ -1,7 +1,7 @@
-
 body {
   height: 100vh;
   overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
   background: #dfdfdf;
 }
 
@@ -10,4 +10,7 @@ body {
   height: 100%;
   overflow: auto;
   scroll-behavior: smooth;
+}
+ul li{
+  list-style: none;
 }
