--- a/angular-cordova/www/scss/style.css
+++ b/angular-cordova/www/scss/style.css
@@ -1,6 +1,7 @@
 body {
   height: 100vh;
   overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
   background: #dfdfdf; }
 
 .swapper {
@@ -8,3 +9,6 @@ body {
   height: 100%;
   overflow: auto;
   scroll-behavior: smooth; }
+
+ul li {
+  list-style: none; }
